# backend/routes/usuario.routes.js
@@ -1,6 +1,6 @@
 import { Router } from "express";
 import UsuarioController from "../controllers/usuario.controller.js";
-import userMiddleware from "../middleware/user.middleware.js";
+import userMiddleware from "../middleware/user.js";
 
 const usuarioRoutes = Router();
 
@@ -10,5 +10,10 @@ usuarioRoutes.post("/logout", UsuarioController.logout);
 usuarioRoutes.post("/resetPassword", UsuarioController.resetPassword);
 usuarioRoutes.post("/forgotPassword", UsuarioController.forgotPassword);
 usuarioRoutes.get("/me", userMiddleware, UsuarioController.profile);
+usuarioRoutes.get(
+  "/getUsersExceptLogged",
+  userMiddleware,
+  UsuarioController.getAllExceptLogged,
+);
 
 export default usuarioRoutes;
